--- a/fonts.conf
+++ b/fonts.conf
@@ -5,7 +5,7 @@
   <alias>
     <family>sans-serif</family>
     <prefer>
-      <family>Inter</family>
+      <family>SF Pro Text</family>
       <family>SF Arabic</family>
       <family>Apple Color Emoji</family>
     </prefer>
