--- a/fonts.conf
+++ b/fonts.conf
@@ -22,7 +22,7 @@
     <family>monospace</family>
     <prefer>
       <family>SF Mono</family>
-      <family>Amiri Typewriter</family>
+      <family>SF Arabic</family>
       <family>Apple Color Emoji</family>
     </prefer>
   </alias>
